[Algolia] Fix search on mobile

--- a/app/_assets/stylesheets/docsearch.less
+++ b/app/_assets/stylesheets/docsearch.less
@@ -21,12 +21,6 @@
   justify-content: center;
 }
 
-.DocSearch {
-  @media (max-width: 1100px) {
-    display: none;
-  }
-}
-
 .DocSearch-Button {
   background: rgba(248, 249, 252, 1);
   color: #4c6d80;
